fix w3c html compliance

--- a/HTML5.html
+++ b/HTML5.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Sample HTML5 Webpage</title>
+  <meta charset="utf-8"/>
+  <title>Sample HTML5 Webpage</title>
 </head>
 <body>
-<p>This is a sample webpage.</p>
+  <p>This is a sample webpage.</p>
 </body>
 </html>
